--- a/Pipfile
+++ b/Pipfile
@@ -4,105 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-altair = "==4.1.0"
-appdirs = "==1.4.4"
-argon2-cffi = "==20.1.0"
-astor = "==0.8.1"
-astroid = "==2.4.2"
-attrs = "==21.2.0"
-backcall = "==0.2.0"
-base58 = "==2.1.0"
-bleach = "==3.3.0"
-blinker = "==1.4"
-cachetools = "==4.2.2"
-certifi = "==2021.5.30"
-cffi = "==1.14.6"
-chardet = "==4.0.0"
-click = "==7.1.2"
-colorama = "==0.4.4"
-debugpy = "==1.3.0"
-decorator = "==5.0.9"
-defusedxml = "==0.7.1"
-distlib = "==0.3.2"
-entrypoints = "==0.3"
-filelock = "==3.0.12"
-gitdb = "==4.0.7"
-idna = "==2.10"
-ipykernel = "==6.0.1"
-ipython = "==7.25.0"
-ipywidgets = "==7.6.3"
-isort = "==5.4.2"
-jedi = "==0.18.0"
-joblib = "==1.0.1"
-jsonschema = "==3.2.0"
-jupyter-client = "==6.1.12"
-jupyter-core = "==4.7.1"
-jupyterlab-pygments = "==0.1.2"
-jupyterlab-widgets = "==1.0.0"
-lazy-object-proxy = "==1.4.3"
-matplotlib-inline = "==0.1.2"
-mccabe = "==0.6.1"
-mistune = "==0.8.4"
-nbclient = "==0.5.3"
-nbconvert = "==6.1.0"
-nbformat = "==5.1.3"
-nest-asyncio = "==1.5.1"
-notebook = "==6.4.0"
-numpy = "==1.21.0"
-pandas = "==1.3.0"
-pandocfilters = "==1.4.3"
-parso = "==0.8.2"
-pickleshare = "==0.7.5"
-pipenv = "==2021.5.29"
-plotly = "==4.14.3"
-prometheus-client = "==0.11.0"
-prompt-toolkit = "==3.0.19"
-protobuf = "==3.17.3"
-pyarrow = "==4.0.1"
-pycparser = "==2.20"
-pydeck = "==0.6.2"
-pylint = "==2.6.0"
-pyparsing = "==2.4.7"
-pyrsistent = "==0.18.0"
-python-dateutil = "==2.8.1"
-pytz = "==2021.1"
-pywin32 = "==301"
-pywinpty = "==1.1.3"
-pyzmq = "==22.1.0"
-requests = "==2.25.1"
-retrying = "==1.3.3"
-scikit-learn = "==0.24.1"
-scipy = "==1.7.0"
-six = "==1.16.0"
-sklearn = "==0.0"
-smmap = "==4.0.0"
-streamlit = "==0.84.0"
-tenacity = "==8.0.0"
-terminado = "==0.10.1"
-testpath = "==0.5.0"
-threadpoolctl = "==2.1.0"
-toml = "==0.10.1"
-toolz = "==0.11.1"
-tornado = "==6.1"
-traitlets = "==5.0.5"
-tzlocal = "==2.1"
-urllib3 = "==1.26.6"
-validators = "==0.18.2"
-virtualenv = "==20.4.7"
-virtualenv-clone = "==0.5.4"
-watchdog = "==2.1.3"
-wcwidth = "==0.2.5"
-webencodings = "==0.5.1"
-widgetsnbextension = "==3.5.1"
-wrapt = "==1.12.1"
-async_generator = "==1.10"
-GitPython = "==3.1.18"
-ipython_genutils = "==0.2.0"
-Jinja2 = "==3.0.1"
-MarkupSafe = "==2.0.1"
-Pillow = "==8.3.1"
-Pygments = "==2.9.0"
-Send2Trash = "==1.7.1"
+scikit-learn = "*"
+pandas = "*"
+streamlit = "*"
+jupyter = "*"
+matplotlib = "*"
+black = "*"
+altair = "*"
+vega-datasets = "*"
+mlxtend = "*"
+plotly = "*"
+plotly-express = "*"
+streamlit-metrics = "*"
+pipreqs = "*"
 
 [dev-packages]
 
